# mini-projects

./: .gitignore  BlackJack.ipynb  README.md  lostOnes  tripleX.cpp
Asteroids/: asteroids.html  asteroids.js
Haskell/: 02_starting_out.hs  03_types.hs  04_syntax.hs  05_recursion.hs  06_higher_order_fn.hs  doubleMe.hs  start.hs
ML_with_Julia/: README.md
ML_with_Julia/Assignment_1/: Ass_1.md
ML_with_Julia/Assignment_2/: bob.ipynb  bob.jl  darts.jl  hamming.ipynb  hamming.jl  (+8 more)
RSA/: RSA_Enc_Dec.py  RSA_Enc_Dec_Superior.py  ciphertext.txt  plaintext.txt  private_key.json  public_key.json
Space_Invadors/: main.py
aerial-induction-2021/: README.md
chitchat/: CMakeLists.txt  README.md
chitchat/include/chitchat/: client.h  config.h.in  lib.h  server.h
chitchat/src/: client.cpp  lib.cpp  server.cpp
exported-chat-app/: README.md
first-api/: package.json  route.rest
first_api/: README.md  package-lock.json  server.js
flash-baron/: README.md  baron333.pickle
flash_baron/: flash_baron.desktop  flash_baron.py  install.sh
flask-app-ds/: .gitignore  README.md  binary_search_tree.py  custom_q.py  custom_stack.py  dummy_data.py  hash_table.py  linked_list.py  requirements.txt  server.py  sqlitedb.file
games/: txt2morse.cpp
my_toDoList/: app.js  index.html
passgen/: README.md  index.js  package.json  passwords.txt
second-api/: test.http
second_api/: package-lock.json  package.json
space-invadors/: main.py
sudoku/: functions.c  sudoku  sudoku.c  sudoku.h
toDoList/: package-lock.json
toDoList2/: db.js  package-lock.json  package.json  test.http
(+38 files in other folders)
